# RoboRTS

./: .gitignore
expected_scan_generator/: CMakeLists.txt  map_by_thomas.pgm  map_by_thomas.yaml
expected_scan_generator/launch/: novel_object_detection.launch
expected_scan_generator/rviz/: view_laserscans.rviz
expected_scan_generator/src/: display_lidar_objects.cpp  expected_scan_node.cpp  novel_objects_filter.cpp
lidar_detection/expected_scan_generator/: package.xml
lidar_detection/novel_lidar_detection/: CMakeLists.txt  package.xml
lidar_detection/novel_msgs/: CMakeLists.txt  package.xml
novel_lidar_detection/: setup.py
novel_lidar_detection/cfg/: novel_lidar_detection.cfg
novel_msgs/msg/: NovelObject.msg  NovelObjectArray.msg
roborts_camera/: .camera_node.cpp.swp  camera_node.cpp  camera_node.h  camera_param.cpp  camera_param.h
roborts_decision/: CMakeLists.txt
roborts_decision/config/: decision-1.prototxt  decision.prototxt
roborts_decision/example_behavior/: escape_behavior.h
roborts_decision/executor/: chassis_executor.cpp  gimbal_executor.cpp
roborts_decision/hop_strategy/: behavior_tree_example.cpp
roborts_decision/include/behavior_tree/: behavior_node.h  behavior_tree.h  behavior_tree_manager.h
roborts_decision/include/blackboard/: blackboard.h
roborts_decision/include/example_behavior/: back_boot_area_behavior.h  chase_behavior.h  escape_behavior.h  goal_behavior.h  patrol_behavior.h  search_behavior.h
roborts_decision/include/executor/: chassis_executor.h  gimbal_executor.h
roborts_decision/include/hop_behavior/: DZ_action.h  back_boot_area_action.h  bonus_action.h  boot_area_backup_action.h  chase_action.h  countdown_action.h  escape_action.h  goal_action.h  patrol_action.h  reload_action.h  search_action.h  shoot_action.h
roborts_decision/include/hop_behaviour/: DZ_action.h  back_boot_area_action.h  chase_action.h  escape_action.h  goal_action.h  patrol_action.h  reload_action.h  search_action.h
roborts_decision/include/hop_conditions/: cond_enemy_detected.h
roborts_decision/include/strategy/: back_boot_area_action.h  chase_action.h  escape_action.h  goal_action.h  patrol_action.h
roborts_decision/src/: behavior_tree_example.cpp  decisionTreeFull.cpp  hop_behavior_test.cpp  hop_decision_test.cpp  hop_decision_tree.bk.cpp  hop_decision_tree.cpp  hop_decision_tree_2.cpp  hop_tree_shooting.cpp
roborts_decision/strategy/: back_boot_area_action.h  chase_action.h  decisionTreeFull.cpp  escape_action.h  goal_action.h  search_action.h
roborts_localization/: CMakeLists.txt  localization_node.cpp  log.h
roborts_planning/: CMakeLists.txt
(+61 files in other folders)
